# recent-backend-investigations

./: Cargo.toml  README.md
docker/: compose.yaml
docker/postgres/init/: init.sql
migration/: v0.sql
runtime/: Cargo.toml
todo-poem/: Cargo.toml
todo-poem/src/: main.rs
todo_cot/: Cargo.toml
todo_cot/config/: dev.toml  prod.toml.example
todo_cot/src/: main.rs  migrations.rs
todo_cot/src/migrations/: m_0001_initial.rs
todo_loco/: Cargo.toml
todo_loco/config/: development.yaml  test.yaml
todo_loco/examples/: playground.rs
todo_loco/migration/src/: lib.rs  m20250405_132549_todos.rs
todo_loco/src/: app.rs
todo_loco/src/controllers/: mod.rs  todo.rs
todo_loco/src/models/: mod.rs  todo.rs  todos.rs
todo_loco/src/models/_entities/: mod.rs  prelude.rs  todo.rs  todos.rs  users.rs
todo_loco/tests/models/: todos.rs  users.rs
todo_loco/tests/requests/: auth.rs  mod.rs  prepare_data.rs  todo.rs
todo_loco/tests/tasks/: seed.rs
